fix: attempt to fix the scrolling issue that prevents the report diaog to be visible.

--- a/app/globals.css
+++ b/app/globals.css
@@ -79,3 +79,9 @@ body {
     @apply bg-background text-foreground;
   }
 }
+
+
+
+body[data-scroll-locked] {
+  pointer-events: auto !important;
+}
